<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="wrap_content">

        <TextView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/acceleration2"
            android:textSize="20sp"/>

        <EditText
            android:background="@drawable/textbox_motion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/inputhint"
            android:textAlignment="center"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:inputType="numberDecimal"
            android:id="@+id/acc_input2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/distance"
            android:textSize="20sp"/>

        <EditText
            android:background="@drawable/textbox_motion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/inputhint"
            android:textAlignment="center"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:inputType="numberDecimal"
            android:id="@+id/dist_input2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/initial_velocity"
            android:textSize="20sp"/>

        <EditText
            android:background="@drawable/textbox_motion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/inputhint"
            android:textAlignment="center"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:inputType="numberDecimal"
            android:id="@+id/vel0_input2"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/final_velocity"
            android:textSize="20sp"
            />

        <EditText
            android:background="@drawable/textbox_motion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/inputhint"
            android:textAlignment="center"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:inputType="numberDecimal"
            android:id="@+id/velf_input2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/time2"
            android:textSize="20sp"
            />

        <EditText
            android:background="@drawable/textbox_motion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/inputhint"
            android:textAlignment="center"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:inputType="numberDecimal"
            android:id="@+id/time_input2"/>

        <Button
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="Solve"
            android:id="@+id/motion_calc"/>
    </LinearLayout>

</ScrollView>