<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/black">
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.stem.sunny.physicforstem.MainActivity"
    android:background="@color/black">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hometitle"
        android:background="@drawable/title_gradient"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logodesc" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="100dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/physicsTitle"
            android:id="@+id/textView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hometitle"
        android:id="@+id/func_section"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        android:gravity="center">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:layout_height="100dp"
            android:id="@+id/camerabutton"
            android:src="@drawable/vid_cam"
            android:background="@drawable/camera_selector" />


        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:layout_marginLeft="3dp"
            android:id="@+id/calcbutton"
            android:src="@drawable/two_arorw"
            android:background="@drawable/conv_selector"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/about_click"
        android:layout_height="100dp"
        android:layout_below="@id/func_section"
        android:layout_marginTop="6dp"
        android:background="@drawable/about_selector"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:clickable="true"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/people"
            android:layout_toLeftOf="@+id/about"
            android:layout_centerInParent="true"
            />
        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:id="@+id/about"
            android:layout_marginLeft="5dp"
            android:layout_height="100dp"
            android:text="@string/about_us"
            android:textSize="30sp"
            android:textAlignment="center"
            android:gravity="center" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_click"
        android:id="@+id/unknown1"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        android:gravity="center">

        <ImageView
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:layout_height="100dp"
            android:src="@drawable/unknown"
            android:id="@+id/u1"
            android:background="@drawable/unknown_selector" />


        <ImageView
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:layout_marginLeft="3dp"
            android:src="@drawable/unknown"
            android:id="@+id/u2"
            android:background="@drawable/unknown_selector"/>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/unknown1"
        android:id="@+id/unknown2"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        android:gravity="center">

        <ImageView
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:layout_height="100dp"
            android:id="@+id/u3"
            android:src="@drawable/unknown"
            android:background="@drawable/unknown_selector" />


        <ImageView
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:id="@+id/u4"
            android:layout_marginLeft="3dp"
            android:src="@drawable/unknown"
            android:background="@drawable/unknown_selector"/>
    </LinearLayout>

</RelativeLayout>
</ScrollView>
